syntax = "proto3";

package presence;
option go_package = "golang.project/go-fundamentals/gameapp/contract/goprotobuf/presence";

message GetPresenceRequest {
  repeated uint64 user_ids = 1;
}

message GetPresenceResponse {
  repeated Presence items = 1;
}

message Presence {
  uint64 user_id = 1;
  int64 timestamp = 2;
}

message UpsertPresenceRequest {
  uint64 user_id = 1;
  int64 timestamp = 2;
}

message UpsertPresenceResponse {
  int64 timestamp = 1;
}

service PresenceService{
  rpc Upsert(UpsertPresenceRequest) returns (UpsertPresenceResponse);
  rpc GetPresence(GetPresenceRequest) returns (GetPresenceResponse);
}